--- a/packages/cdk/package.json
+++ b/packages/cdk/package.json
@@ -19,6 +19,7 @@
     "aws-cdk-lib": "^2.0.0",
     "constructs": "^10.0.0",
     "esbuild": "^0.20.0",
+    "ts-node": "^10.9.2",
     "typescript": "^5.0.0"
   }
 }
