--- a/packages/cdk/tsconfig.json
+++ b/packages/cdk/tsconfig.json
@@ -19,5 +19,5 @@
     "strictPropertyInitialization": false,
     "outDir": "dist"
   },
-  "exclude": ["node_modules", "dist"]
+  "exclude": ["node_modules", "dist", "cdk.out"]
 }
