--- a/package.json
+++ b/package.json
@@ -7,11 +7,20 @@
     "packages/*"
   ],
   "scripts": {
-    "build": "npm run build --workspaces",
+    "build": "tsc --build tsconfig.json",
+    "build:construct": "npm run build -w packages/cdk-construct",
     "test": "npm run test --workspaces",
-    "deploy": "npm run deploy -w packages/cdk"
+    "deploy": "npm run deploy -w packages/cdk",
+    "clean": "npm run clean:dist && npm run clean:tsbuildinfo",
+    "clean:deep": "npm run clean:dist && npm run clean:tsbuildinfo && npm run clean:modules",
+    "clean:dist": "npm exec --workspaces -- npx rimraf dist && npx rimraf dist",
+    "clean:modules": "npm exec --workspaces -- npx rimraf node_modules && npx rimraf node_modules",
+    "clean:tsbuildinfo": "npm exec --workspaces -- npx rimraf tsconfig.tsbuildinfo"
   },
   "keywords": ["load-testing", "aws-lambda", "oha", "k6"],
   "author": "",
-  "license": "ISC"
+  "license": "MIT",
+  "devDependencies": {
+    "rimraf": "6.0.1"
+  }
 }
