--- a/packages/cdk/package.json
+++ b/packages/cdk/package.json
@@ -16,9 +16,9 @@
   "devDependencies": {
     "@types/node": "^20.0.0",
     "aws-cdk": "^2.0.0",
-    "aws-cdk-lib": "^2.0.0",
-    "constructs": "^10.0.0",
-    "esbuild": "^0.20.0",
+    "aws-cdk-lib": "2.189.0",
+    "constructs": "10.0.5",
+    "esbuild": "0.25.2",
     "ts-node": "^10.9.2",
     "typescript": "^5.0.0"
   }
