--- a/packages/lambda/package.json
+++ b/packages/lambda/package.json
@@ -14,12 +14,13 @@
   "license": "ISC",
   "dependencies": {
     "@aws-sdk/client-s3": "^3.0.0",
+    "aws-cdk-lib": "2.189.0",
     "aws-lambda": "^1.0.7"
   },
   "devDependencies": {
     "@types/aws-lambda": "^8.10.0",
     "@types/node": "^20.0.0",
-    "esbuild": "^0.20.0",
+    "esbuild": "^0.25.2",
     "typescript": "^5.0.0"
   }
 }
