Setup CDK stack to test package

--- a/packages/cdk-construct/.projen/tasks.json
+++ b/packages/cdk-construct/.projen/tasks.json
@@ -89,6 +89,18 @@
       "steps": [
         {
           "exec": "jsii --silence-warnings=reserved-word"
+        },
+        {
+          "exec": "rm -rf ./lib/lambda"
+        },
+        {
+          "exec": "mkdir -p ./lib/lambda"
+        },
+        {
+          "exec": "cp -R ../lambda/dist ./lib/lambda/"
+        },
+        {
+          "exec": "cp -R ../lambda/docker ./lib/lambda/"
         }
       ]
     },
