--- a/packages/cdk/package.json
+++ b/packages/cdk/package.json
@@ -15,7 +15,7 @@
   "license": "ISC",
   "devDependencies": {
     "@types/node": "^20.0.0",
-    "aws-cdk": "^2.0.0",
+    "aws-cdk": "2.1007.0",
     "aws-cdk-lib": "2.189.0",
     "constructs": "10.0.5",
     "esbuild": "0.25.2",
