--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -42,9 +42,15 @@ jobs:
         with:
           role-to-assume: arn:aws:iam::${{ secrets.AWS_ACCOUNT_ID }}:role/builder-writeRole
           aws-region: us-east-2
+
       - name: Build
         run: |
           npm run build
+
+      - name: Package the Construct
+        run: |
+          npm run build:construct
+
       - name: Deploy CDK Stack (Main)
         if: github.ref == 'refs/heads/main'
         run: |
@@ -52,6 +58,64 @@ jobs:
 
       - name: Deploy CDK Stack (PR)
         if: github.event_name == 'pull_request'
+        env:
+          PR_NUMBER: ${{ github.event.pull_request.number }}
+        run: |
+          npx cdk deploy crush-test-pr-${PR_NUMBER} --require-approval never --outputs-file cdk-outputs.json
+
+      - name: Upload cdk-construct-package artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: cdk-construct-package
+          path: packages/cdk-construct/dist/js/*.tgz
+
+  deploy-packaged:
+    name: Deploy Packaged
+    runs-on: ubuntu-latest
+    needs: deploy
+    permissions:
+      contents: read
+      id-token: write
+    if: github.ref == 'refs/heads/main' || github.event_name == 'pull_request'
+    steps:
+      - name: Checkout CDK only (sparse)
+        uses: actions/checkout@v4
+        with:
+          sparse-checkout: |
+            packages/cdk
+          sparse-checkout-cone-mode: false
+
+      - name: Download cdk-construct-package artifact
+        uses: actions/download-artifact@v4
+        with:
+          name: cdk-construct-package
+          path: packages/cdk
+
+      - name: Install packaged construct
+        working-directory: packages/cdk
+        run: |
+          npm install ./crush-test-cdk*.tgz
+
+      - name: Build
+        working-directory: packages/cdk
+        run: |
+          npm run build
+
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v4
+        with:
+          role-to-assume: arn:aws:iam::${{ secrets.AWS_ACCOUNT_ID }}:role/builder-writeRole
+          aws-region: us-east-2
+
+      - name: Deploy CDK Stack (Main)
+        if: github.ref == 'refs/heads/main'
+        working-directory: packages/cdk
+        run: |
+          npx cdk deploy crush-test --require-approval never --outputs-file cdk-outputs.json
+
+      - name: Deploy CDK Stack (PR)
+        if: github.event_name == 'pull_request'
+        working-directory: packages/cdk
         env:
           PR_NUMBER: ${{ github.event.pull_request.number }}
         run: |
