--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -80,14 +80,14 @@ jobs:
         uses: actions/checkout@v4
         with:
           sparse-checkout: |
-            packages/cdk
+            cdk-consumer-test
           sparse-checkout-cone-mode: false
 
       - name: Download cdk-construct-package artifact
         uses: actions/download-artifact@v4
         with:
           name: cdk-construct-package
-          path: packages/cdk
+          path: cdk-consumer-test
 
       - name: Install packaged construct
         working-directory: packages/cdk
@@ -95,7 +95,7 @@ jobs:
           npm install ./crush-test-cdk*.tgz
 
       - name: Build
-        working-directory: packages/cdk
+        working-directory: cdk-consumer-test
         run: |
           npm run build
 
@@ -107,14 +107,14 @@ jobs:
 
       - name: Deploy CDK Stack (Main)
         if: github.ref == 'refs/heads/main'
-        working-directory: packages/cdk
+        working-directory: cdk-consumer-test
         run: |
-          npx cdk deploy crush-test --require-approval never --outputs-file cdk-outputs.json
+          npx cdk deploy crush-test-construct-test --require-approval never --outputs-file cdk-outputs.json
 
       - name: Deploy CDK Stack (PR)
         if: github.event_name == 'pull_request'
-        working-directory: packages/cdk
+        working-directory: cdk-consumer-test
         env:
           PR_NUMBER: ${{ github.event.pull_request.number }}
         run: |
-          npx cdk deploy crush-test-pr-${PR_NUMBER} --require-approval never --outputs-file cdk-outputs.json
+          npx cdk deploy crush-test-construct-test-pr-${PR_NUMBER} --require-approval never --outputs-file cdk-outputs.json
