--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,7 +27,10 @@ jobs:
         run: npm run build
       - name: Package the Construct
         run: |
-          npm run build:construct
+          npm run compile -w packages/cdk-construct
+          npm run post-compile -w packages/cdk-construct
+          npm run test -w packages/cdk-construct
+          npm run package -w packages/cdk-construct
       - name: Upload cdk-construct-package artifact
         uses: actions/upload-artifact@v4
         with:
