Initial smoke check

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -73,6 +73,32 @@ jobs:
         run: |
           npx cdk deploy crush-test-pr-${PR_NUMBER} --require-approval never --outputs-file cdk-outputs.json
 
+      - name: Determine Lambda Name
+        id: lambda-name
+        run: |
+          if [[ "${GITHUB_REF}" == "refs/heads/main" ]]; then
+            echo "lambda_name=crush-test-lambda" >> $GITHUB_OUTPUT
+          else
+            echo "lambda_name=crush-test-lambda-pr-${{ github.event.pull_request.number }}" >> $GITHUB_OUTPUT
+          fi
+
+      - name: Smoke Check
+        run: |
+          aws lambda invoke --cli-read-timeout 120 --function-name ${{ steps.lambda-name.outputs.lambda_name }} --payload '{"tool":"oha","labels":{"test":"oha","type":"ping-c20-z10s"},"args":["--no-tui","-j","-c","20","-z","10s","https://lambdadispatch.ghpublic.pwrdrvr.com/ping"]}' --cli-binary-format raw-in-base64-out response.json
+          cat response.json
+          cat response.json | jq .
+          STATUS_CODE=$(cat response.json | jq -r '.statusCode')
+          if [ "$STATUS_CODE" != "200" ]; then
+            echo "Smoke check failed: statusCode=$STATUS_CODE"
+            exit 1
+          fi
+
+      - name: Upload smoke check response.json
+        uses: actions/upload-artifact@v4
+        with:
+          name: smoke-check-response
+          path: response.json
+
   deploy-packaged:
     name: Deploy Packaged
     runs-on: ubuntu-latest
@@ -127,3 +153,31 @@ jobs:
           PR_NUMBER: ${{ github.event.pull_request.number }}
         run: |
           npx cdk deploy crush-test-construct-test-pr-${PR_NUMBER} --require-approval never --outputs-file cdk-outputs.json
+
+      - name: Determine Lambda Name
+        id: lambda-name
+        working-directory: cdk-consumer-test
+        run: |
+          if [[ "${GITHUB_REF}" == "refs/heads/main" ]]; then
+            echo "lambda_name=crush-test-construct-test-lambda" >> $GITHUB_OUTPUT
+          else
+            echo "lambda_name=crush-test-construct-test-lambda-pr-${{ github.event.pull_request.number }}" >> $GITHUB_OUTPUT
+          fi
+
+      - name: Smoke Check
+        working-directory: cdk-consumer-test
+        run: |
+          aws lambda invoke --cli-read-timeout 120 --function-name ${{ steps.lambda-name.outputs.lambda_name }} --payload '{"tool":"oha","labels":{"test":"oha","type":"ping-c20-z10s"},"args":["--no-tui","-j","-c","20","-z","10s","https://lambdadispatch.ghpublic.pwrdrvr.com/ping"]}' --cli-binary-format raw-in-base64-out response.json
+          cat response.json
+          cat response.json | jq .
+          STATUS_CODE=$(cat response.json | jq -r '.statusCode')
+          if [ "$STATUS_CODE" != "200" ]; then
+            echo "Smoke check failed: statusCode=$STATUS_CODE"
+            exit 1
+          fi
+
+      - name: Upload smoke check response.json
+        uses: actions/upload-artifact@v4
+        with:
+          name: smoke-check-response
+          path: response.json
