--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -238,6 +238,8 @@ jobs:
       - name: Update README with perf table
         if: github.ref == 'refs/heads/main'
         run: |
+          git fetch origin main
+          git pull --rebase origin main
           node scripts/update-readme-perf-table.js perf.md README.md
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
