--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,7 +24,9 @@ jobs:
       - uses: actions/checkout@v4
       - uses: ./.github/actions/configure-nodejs
       - name: Build
-        run: npm run build
+        run: |
+          npm run build
+          npm run build -w packages/lambda
       - name: Cache cdk-construct build outputs
         id: cdk_construct_cache
         uses: actions/cache@v4
