--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
   "author": "PwrDrvr LLC",
   "license": "MIT",
   "devDependencies": {
-    "rimraf": "6.0.1"
+    "glob": "11.0.1",
+    "rimraf": "6.0.1",
+    "semver": "7.7.1"
   }
 }
