--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,9 @@
     },
     {
       "path": "packages/lambda/"
+    },
+    {
+      "path": "packages/crush-test-cli/"
     }
   ],
   "exclude": [
